SB-26092 Fix circleci issue